src/assets/App.css
/* ... */
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .AppHeader {
    height: auto;
  }

  .AppName {
    flex-grow: unset;
    width: auto;
  }

  .block {
    width: calc(96vw / min(3, var(--max-visible-cards)));
  }

  .searchBar {
    width: auto;
  }

  .AppName,
  .searchBar,
  .extras,
  .tags {
    order: unset;
  }
}

/* Large devices (desktops, 992px and up)*/
@media only screen and (min-width: 992px) {
  .block {
    width: calc(96vw / min(3, var(--max-visible-cards)));
  }
}

/* X-Large devices (large desktops, 1200px and up)*/
@media only screen and (min-width: 1200px) {
  .block {
    width: calc(96vw / min(4, var(--max-visible-cards)));
  }
}

/* XX-Large devices (larger desktops, 1400px and up)*/
@media only screen and (min-width: 1400px) {
  .block {
    width: calc(95vw / min(4, var(--max-visible-cards)));
  }
}

@media (min-width: 1800px) {
  .App {
    width: 1800px;
    margin: 0 auto;
    padding: 0;
  }

  .block {
    width: calc(
      (1800px - 20px * min(5, var(--max-visible-cards))) / min(5, var(--max-visible-cards))
    );
  }
}

/***** PAGE ****/
.Page {
  max-width: 1024px;
  margin: 0 auto;
  color: var(--primary-text-color);
}

.Page .title {
  color: var(--primary-text-color);
}

.Page button {
  background: var(--card-background-color);
  border: none;
  border-radius: 20px;
  border: 1px solid var(--card-border-color);
  padding: 8px 16px;
  color: var(--primary-text-color);
  cursor: pointer;
}

.Page .buttonIcon {
  position: relative;
  vertical-align: middle;
}

.layoutLayers {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
}

.layoutLayers > * {
  scroll-snap-align: end;
}

/*Helpers */
.noMargin {
  margin: 0 !important;
}

.marginLeftAuto {
  margin-left: auto;
}

.hideScrollBar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.hideScrollBar::-webkit-scrollbar {
  display: none;
}

.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}

.defaultToast {
  background-color: var(--card-background-color);
  padding: 10px 20px;
  color: var(--primary-text-color);
  border-radius: 10px;
}

.dangerToast {
  background-color: #ff4d4f;
  color: white;
  padding: 10px 20px;
  border-radius: 10px;
}
.successToast {
  background-color: #52c41a;
  color: white;
  padding: 10px 20px;
  border-radius: 10px;
}
.capitalize {
  text-transform: capitalize;
}

/**
Modal
**/

.Modal {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 650px;
  background-color: var(--card-background-color);
  padding: 24px;
  border-radius: 10px;
  box-shadow: 0 0 20px #00000052;
  z-index: 3;
  max-height: 80vh;
  overflow-y: auto;
}

.Overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--overlay-background-color);
  backdrop-filter: blur(2px);
}

.modalHeader {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 16px;
  position: relative;
}

.modalTitle {
  margin: 0;
  padding: 0;
  color: var(--primary-text-color);
  font-size: 1.3em;
  display: inline-flex;
  width: 100%;
  column-gap: 8px;
  align-items: center;
}
.modalCloseBtn {
  align-items: center;
  position: absolute;
  background-color: transparent;
  border-radius: 50%;
  top: 0;
  right: 0;
  border: none;
  color: var(--primary-text-color);
  cursor: pointer;
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  text-align: center;
}
.modalCloseBtn:hover {
  opacity: 0.7;
}
.settingContent .form {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
}

.settingContent input[type='text'] {
  flex: 1;
  background-color: var(--settings-input-background-color);
  border: 1px solid var(--settings-input-border-color);
  border-radius: 50px;
  padding: 6px 18px;
  color: var(--settings-input-text-color);
  font-size: 14px;
}

.settingContent input[type='text']::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--settings-input-placeholder-color);
  opacity: 1;
  font-size: 14px;
}

.settingContent input[type='text']:focus {
  border-color: var(--settings-input-border-focus-color);
}
@media (max-width: 768px) {
  .Modal {
    left: 0;
    top: 0;
    margin: 0;
    height: 100vh;
    max-height: 100vh;
    transform: translate(0, 0);
    border-radius: 0;
    position: relative;
    box-shadow: none;
    width: auto;
  }
  .settingContent {
    margin-top: 6px;
  }
  .settingRow {
    flex-direction: column;
    align-items: flex-start;
  }
}

